fixed extra character in header navigation causing problem on mobile devices

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,7 +1,7 @@
 nav.navbar.navbar-default.navbar-static-top
   .container
     .navbar-header
-      button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
