change navbar link to Posts and added link to Articles

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,4 +11,5 @@ nav.navbar.navbar-default.navbar-static-top
 
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
-        li = link_to 'Home', root_path
+        li = link_to 'Posts', posts_path
+        li = link_to 'Articles', articles_path
