added "paginate" link to header

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -13,3 +13,4 @@ nav.navbar.navbar-default.navbar-static-top
       ul.nav.navbar-nav
         li = link_to 'Posts', posts_path
         li = link_to 'Articles', articles_path
+        li = link_to 'Paginate', paginate_path
