add target blank to link in footer

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -2,4 +2,4 @@
 hr
 footer
   .container
-    p.pull-right Created by #{link_to 'josefzacek.com', 'http://josefzacek.com'}
+    p.pull-right Created by #{link_to 'josefzacek.com', 'http://josefzacek.com', target: '_blank'}
