Rename logo text

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -7,7 +7,7 @@ nav.navbar.navbar-default.navbar-static-top
         span.icon-bar
         span.icon-bar
 
-      = link_to 'Infinite Scrolling', root_path, class: 'navbar-brand'
+      = link_to 'Page Scrolling', root_path, class: 'navbar-brand'
 
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
