update path to Infinite Scrolling in header

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,6 +11,6 @@ nav.navbar.navbar-default.navbar-static-top
 
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
-        li = link_to 'Posts', posts_path
+        li = link_to 'Infinite Scrolling', infinite_scrolling_path
         li = link_to 'Articles', articles_path
         li = link_to 'Paginate', paginate_path
