--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -12,5 +12,5 @@ nav.navbar.navbar-default.navbar-static-top
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
         li = link_to 'Infinite Scrolling', infinite_scrolling_path
-        li = link_to 'Articles', articles_path
+        li = link_to 'Load more button', load_more_button_path
         li = link_to 'Paginate', paginate_path
