homepage add buttons to relevant pages

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -7,9 +7,14 @@
   .col-md-4.text-center
     h2 Infinite Scrolling
     p Loads new records as user scrolls down
+    = link_to 'Infinite Scrolling', '/infinite-scrolling', class: 'btn btn-primary'
+
   .col-md-4.text-center
     h2 Load more button
     p Load more records on click of button
+    = link_to 'Load more button', 'load-more-button', class: 'btn btn-primary'
+
   .col-md-4.text-center
     h2 Paginate
     p Traditional pagination at the bottom of page
+    = link_to 'Paginate', '/paginate', class: 'btn btn-primary'
